cpp/inspireface/c_api/inspireface.h


typedef struct HFFaceBasicToken {
    HInt32 size;  
    HPVoid data;  
} HFFaceBasicToken, *PHFFaceBasicToken;
HYPER_CAPI_EXPORT extern HResult HFCopyFaceBasicToken(HFFaceBasicToken token, HPBuffer buffer, HInt32 bufferSize);
HYPER_CAPI_EXPORT extern HResult HFGetFaceBasicTokenSize(HPInt32 bufferSize);
HYPER_CAPI_EXPORT extern HResult HFGetNumOfFaceDenseLandmark(HPInt32 num);
HYPER_CAPI_EXPORT extern HResult HFGetFaceDenseLandmarkFromFaceToken(HFFaceBasicToken singleFace, PHPoint2f landmarks, HInt32 num);
HYPER_CAPI_EXPORT extern HResult HFGetFaceFiveKeyPointsFromFaceToken(HFFaceBasicToken singleFace, PHPoint2f landmarks, HInt32 num);
HYPER_CAPI_EXPORT extern HResult HFSessionSetEnableTrackCostSpend(HFSession session, HInt32 value);
HYPER_CAPI_EXPORT extern HResult HFSessionPrintTrackCostSpend(HFSession session);
typedef struct HFFaceFeature {
    HInt32 size;   
    HPFloat data;  
} HFFaceFeature, *PHFFaceFeature;
HYPER_CAPI_EXPORT extern HResult HFFaceFeatureExtract(HFSession session, HFImageStream streamHandle, HFFaceBasicToken singleFace,
                                                      PHFFaceFeature feature);
HYPER_CAPI_EXPORT extern HResult HFFaceFeatureExtractTo(HFSession session, HFImageStream streamHandle, HFFaceBasicToken singleFace,
                                                        HFFaceFeature feature);
HYPER_CAPI_EXPORT extern HResult HFFaceFeatureExtractCpy(HFSession session, HFImageStream streamHandle, HFFaceBasicToken singleFace, HPFloat feature);
HYPER_CAPI_EXPORT extern HResult HFCreateFaceFeature(PHFFaceFeature feature);
HYPER_CAPI_EXPORT extern HResult HFReleaseFaceFeature(PHFFaceFeature feature);
HYPER_CAPI_EXPORT extern HResult HFFaceGetFaceAlignmentImage(HFSession session, HFImageStream streamHandle, HFFaceBasicToken singleFace,
                                                             PHFImageBitmap handle);
HYPER_CAPI_EXPORT extern HResult HFFaceFeatureExtractWithAlignmentImage(HFSession session, HFImageStream streamHandle, HFFaceFeature feature);
typedef enum HFSearchMode {
    HF_SEARCH_MODE_EAGER = 0,   
    HF_SEARCH_MODE_EXHAUSTIVE,  
} HFSearchMode;
typedef enum HFPKMode {
    HF_PK_AUTO_INCREMENT = 0,  
    HF_PK_MANUAL_INPUT,        
} HFPKMode;
#define HF_INVALID_FACE_ID ((HFaceId)-1)
typedef struct HFFeatureHubConfiguration {
    HFPKMode primaryKeyMode;    
    HInt32 enablePersistence;   
    HString persistenceDbPath;  
    HFloat searchThreshold;     
    HFSearchMode searchMode;    
} HFFeatureHubConfiguration;
HYPER_CAPI_EXPORT extern HResult HFFeatureHubDataEnable(HFFeatureHubConfiguration configuration);
HYPER_CAPI_EXPORT extern HResult HFFeatureHubDataDisable();
typedef struct HFFaceFeatureIdentity {
    HFaceId id;              
    PHFFaceFeature feature;  
} HFFaceFeatureIdentity, *PHFFaceFeatureIdentity;
typedef struct HFFeatureHubSearchResultV2 {
    HInt32 found;
    HFaceId id;
    HFloat confidence;
    HFFaceFeature feature;
} HFFeatureHubSearchResultV2, *PHFFeatureHubSearchResultV2;
typedef struct HFSearchTopKResults {
    HInt32 size;         
    HPFloat confidence;  
    HPFaceId ids;        
} HFSearchTopKResults, *PHFSearchTopKResults;
HYPER_CAPI_EXPORT extern HResult HFFeatureHubFaceSearchThresholdSetting(HFloat threshold);
HYPER_CAPI_EXPORT extern HResult HFFaceComparison(HFFaceFeature feature1, HFFaceFeature feature2, HPFloat result);
HYPER_CAPI_EXPORT extern HResult HFGetRecommendedCosineThreshold(HPFloat threshold);
HYPER_CAPI_EXPORT extern HResult HFCosineSimilarityConvertToPercentage(HFloat similarity, HPFloat result);
typedef struct HFSimilarityConverterConfig {
    HFloat threshold;    
    HFloat middleScore;  
    HFloat steepness;    
    HFloat outputMin;    
    HFloat outputMax;    
} HFSimilarityConverterConfig, *PHFSimilarityConverterConfig;