cpp/inspireface/c_api/intypedef.h


typedef void*               HFImageStream;                    
typedef void*               HFSession;                        
typedef void**              PHFImageBitmap;                   
typedef float               HFloat;                           
typedef float*              HPFloat;                          
typedef signed int			HInt32;                           
typedef signed int*			HPInt32;                          
typedef int64_t             HFaceId;                          
typedef int64_t*            HPFaceId;                         
typedef long                HResult;                          
typedef char*               HString;                          
typedef char*               HPBuffer;                         
typedef struct HPoint2f{
    HFloat x;                                                 
    HFloat y;                                                 
} HPoint2f, *PHPoint2f;